feat: 음악 선택 화면 레이어 ui 작업

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -40,7 +40,7 @@
         </ng-container>
         <ng-container *ngSwitchCase="step.Text"> </ng-container>
         <ng-container *ngSwitchCase="step.Music">
-          <h1>* 음악 선택 컴포넌트 추가 *</h1>
+          <form-music-playlist controlName="musicId"></form-music-playlist>
         </ng-container>
       </ng-container>
 
