--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,46 @@
 <div class="container">
-  <h1>Happy New Year</h1>
-  <p>
-    소중한 사람을 위해 세상에 단 하나 뿐인 카드를 만들어 보세요. <br />새해를
-    여는 음악도 함께 보낼 수 있어요.
+  <h1 class="font-h1">
+    2023,<br />
+    Happy 'Black Rabbit' Year!
+  </h1>
+  <h3 class="font-h3">
+    소중한 사람을 위해 신년카드를 만들어 보세요. <br />새해를 여는 음악도 함께
+    보낼 수 있어요.
+  </h3>
+  <a [routerLink]="['/editor']">
+    <div class="button-default button-editor">신년 카드 만들기</div></a
+  >
+  <p class="instagram-link">
+    created by
+    <a href="https://www.instagram.com/pot_works/" target="_blank"
+      >@pot_works</a
+    >
+    &
+    <a href="https://www.instagram.com/playthings.kr/" target="_blank"
+      >@playthings.kr</a
+    >
   </p>
-  <a [routerLink]="['/editor']">신년 카드 만들기</a>
+</div>
+
+<div class="background">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
 </div>
