--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="font-h1">
     2023,<br />
-    Happy 'Black Rabbit' Year!
+    Happy 'Black Bunny' Year!
   </h1>
   <h3 class="font-h3">
     소중한 사람을 위해 신년카드를 만들어 보세요. <br />새해를 여는 음악도 함께
