--- a/src/app/form-music-playlist/form-music-playlist.component.scss
+++ b/src/app/form-music-playlist/form-music-playlist.component.scss
@@ -1,18 +1,20 @@
+@import "src/styles";
+
 .playlist-container {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
-  border: 1px solid black;
+  background-color: $color-white;
+  border: 1px solid $color-black;
 }
 
 .playlist-wrapper {
   width: 80vw;
-  height: 600px;
+  height: 650px;
   display: flex;
   justify-content: center;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   overflow-y: scroll;
 
   .whitespace {
@@ -27,7 +29,7 @@
   overflow: hidden;
   margin: 15px;
   cursor: pointer;
-  border: 5px solid white;
+  border: 5px solid $color-white;
   --shadow-color: rgba(0, 0, 0, 0.4);
   filter: drop-shadow(1px 1px 8px var(--shadow-color));
 }
@@ -42,14 +44,13 @@
 }
 
 .music-info {
-  color: white;
+  color: $color-white;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 80%;
-  padding: 20px;
   text-align: center;
 
   p {
@@ -103,7 +104,7 @@
 
 /* CHECKED STYLES */
 [type="radio"]:checked + div {
-  outline: 2px solid rgb(255, 65, 125);
+  outline: 2px solid $color-primary;
 
   .album-image {
     filter: grayscale(100%);
@@ -112,6 +113,40 @@
 
 #player {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  width: 200px;
+  height: 200px;
+  top: 20px;
+  right: 20px;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.player-ui {
+  position: fixed;
+  top: 15px;
+  right: 210px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.playing-motion {
+  -webkit-animation-name: cssAnimation;
+  -webkit-animation-duration: 20s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-fill-mode: forwards;
+  animation-name: cssAnimation;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes cssAnimation {
+  from {
+    -webkit-transform: rotate(0deg) scale(1) skew(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg) scale(1) skew(0deg);
+  }
 }
