--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-  font-family: "Noto Sans KR";
+  font-family: "Noto Sans KR" sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -24,6 +24,14 @@ $color-white: #ffffff;
   font-weight: 300;
   font-size: 26px;
   line-height: 1.5;
+}
+
+.font-desc {
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.3;
+  text-align: center;
 }
 
 .button {
