--- a/src/app/popup/popup/popup.component.scss
+++ b/src/app/popup/popup/popup.component.scss
@@ -8,7 +8,7 @@
   transform: translate(-50%, -50%);
   background-color: $color-white;
   border: 1px solid $color-black;
-  width: 400px;
+  min-width: 400px;
   min-height: 200px;
   padding: 30px 30px 88px 30px;
   display: flex;
@@ -37,7 +37,8 @@
   button {
     border: 1px solid $color-black;
     background-color: $color-white;
-    width: 100px;
+    min-width: 100px;
+    padding: 0 20px;
     height: 40px;
     font-family: "Noto Sans KR";
     font-weight: 500;
