--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -21,26 +21,4 @@
     >
   </p>
 </div>
-
-<div class="background">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-</div>
+<bg-canvas color="white" effect="circles"></bg-canvas>
