feat: 카드 뷰어 모듈 생성

--- a/src/app/editor/component/editor/editor.component.html
+++ b/src/app/editor/component/editor/editor.component.html
@@ -5,7 +5,10 @@
         <h3 class="font-h3">{{ title[currentStep].kr }}</h3>
         <h1 class="font-h1">{{ title[currentStep].en }}</h1>
       </div>
-      <div class="flip-card" [class.flipped]="currentStep === step.Text">
+      <div
+        class="flip-card selected-motion"
+        [class.flipped]="currentStep === step.Text"
+      >
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <img
