--- a/src/app/editor/component/editor/editor.component.scss
+++ b/src/app/editor/component/editor/editor.component.scss
@@ -87,6 +87,10 @@
   transform: rotateY(180deg);
 }
 
+.flipped-hover:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
 /* Position the front and back side */
 .flip-card-front,
 .flip-card-back {
