--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,12 @@ $color-white: #ffffff;
   line-height: 1.5;
 }
 
+.font-card {
+  font-family: epilogue-210, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .font-desc {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 500;
@@ -34,11 +40,14 @@ $color-white: #ffffff;
   text-align: center;
 }
 
+.font-white {
+  color: $color-white;
+}
+
 .button {
   border: none;
   width: 200px;
   height: 60px;
-  font-family: "Noto Sans KR";
   font-weight: 500;
   font-size: 18px;
   border-radius: 16px; // @TODO: 보더 줄까 말까..
@@ -69,4 +78,23 @@ $color-white: #ffffff;
   &:hover {
     background-color: $color-primary;
   }
+}
+
+.button-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 7vh;
+  width: 90vw;
+}
+
+.button-container-right {
+  @extend .button-container;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.button-container-right > button:nth-child(2) {
+  margin-top: 10px;
 }
